--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
 pyramid
+pyramid_chameleon
+pyramid_debugtoolbar
+pyramid_tm
+SQLAlchemy
+transaction
+zope.sqlalchemy
+waitress
+psycopg2
+nose
+rednose
+flake8
+coverage
